--- a/SensiTape/Base.lproj/Main.storyboard
+++ b/SensiTape/Base.lproj/Main.storyboard
@@ -180,23 +180,23 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="S48-oi-qMP">
                                 <rect key="frame" x="0.0" y="119" width="393" height="630"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pgg-NU-YsP">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="144.66666666666666"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pgg-NU-YsP">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCo-gZ-UjH">
-                                                <rect key="frame" x="0.0" y="0.0" width="191.66666666666666" height="144.66666666666666"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="127.66666666666667" height="145"/>
                                                 <fontDescription key="fontDescription" name="Koulen-Regular" family="Koulen" pointSize="80"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Adc-ya-6K9">
-                                                <rect key="frame" x="201.66666666666663" y="0.0" width="191.33333333333337" height="144.66666666666666"/>
+                                                <rect key="frame" x="137.66666666666663" y="0.0" width="255.33333333333337" height="145"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ActivityIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Shl-5w-rvX">
-                                                        <rect key="frame" x="0.0" y="0.0" width="191.33333333333334" height="115"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="255.33333333333334" height="130"/>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A brief description of the activity" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6V-wg-0sJ">
-                                                        <rect key="frame" x="0.0" y="115.00000000000001" width="191.33333333333334" height="29.666666666666671"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Current Data" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6V-wg-0sJ">
+                                                        <rect key="frame" x="0.0" y="130" width="255.33333333333334" height="15"/>
                                                         <fontDescription key="fontDescription" name="Inconsolata-Regular" family="Inconsolata" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -204,23 +204,26 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="cCo-gZ-UjH" firstAttribute="width" secondItem="Shl-5w-rvX" secondAttribute="width" multiplier="0.5" id="TNG-pe-rBm"/>
+                                        </constraints>
                                     </stackView>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H2U-HF-AO6">
                                         <rect key="frame" x="0.0" y="145" width="393" height="216"/>
                                     </pickerView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pNO-dU-S17">
-                                        <rect key="frame" x="0.0" y="360.66666666666674" width="393" height="269.33333333333326"/>
+                                        <rect key="frame" x="0.0" y="361" width="393" height="269"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RpQ-I3-F8O" customClass="LineGraphView" customModule="SensiTape" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="83"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjV-Z8-f30" customClass="LineGraphView" customModule="SensiTape" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="92.999999999999943" width="393" height="83.333333333333314"/>
+                                                <rect key="frame" x="0.0" y="93" width="393" height="83"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HR0-Ke-tRN" customClass="LineGraphView" customModule="SensiTape" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="186.33333333333331" width="393" height="83"/>
+                                                <rect key="frame" x="0.0" y="186" width="393" height="83"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
